logs/vydia.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/appdirs-1.4.3.dist-info'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-6.7.dist-info'...
Listing './lib/python3.5/site-packages/logzero'...
Listing './lib/python3.5/site-packages/logzero-1.3.1.dist-info'...
Listing './lib/python3.5/site-packages/pafy'...
Listing './lib/python3.5/site-packages/pafy-0.5.3.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/python_mpv-0.3.8.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/urwid'...
Listing './lib/python3.5/site-packages/urwid/tests'...
Listing './lib/python3.5/site-packages/urwid-1.3.1.egg-info'...
Listing './lib/python3.5/site-packages/urwid_readline'...
Listing './lib/python3.5/site-packages/urwid_readline-0.4.egg-info'...
Listing './lib/python3.5/site-packages/vydia'...
Listing './lib/python3.5/site-packages/vydia/core'...
Compiling './lib/python3.5/site-packages/vydia/core/controller.py'...
***   File "./lib/python3.5/site-packages/vydia/core/controller.py", line 43
    logger.info(f'Create controller')
                                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/vydia/core/model.py'...
***   File "./lib/python3.5/site-packages/vydia/core/model.py", line 21
    self.STATE_FILE: Path = state_fname \
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/vydia/extra'...
Compiling './lib/python3.5/site-packages/vydia/extra/plugins.py'...
***   File "./lib/python3.5/site-packages/vydia/extra/plugins.py", line 94
    print(f'Skipping {entry.path}')
                                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/vydia/extra/utils.py'...
***   File "./lib/python3.5/site-packages/vydia/extra/utils.py", line 51
    raise ValueError(f'Playlist "{_id}" could not be loaded')
                                                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/vydia/main.py'...
***   File "./lib/python3.5/site-packages/vydia/main.py", line 31
    print(f'Added "{title}" using {plugin}')
                                          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/vydia-0.5.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
